--- a/NET9/BlazorInteractiveWebAssembly/BlazorInteractiveWebAssembly/wwwroot/app.css
+++ b/NET9/BlazorInteractiveWebAssembly/BlazorInteractiveWebAssembly/wwwroot/app.css
@@ -1,5 +1,6 @@
-h1:focus {
-    outline: none;
+* { margin: 0; padding: 0; box-sizing: border-box }
+.container {
+    max-width: 1400px; margin: auto; padding: 1rem
 }
 
 .valid.modified:not([type=checkbox]) {
